Add rareVariant-burdenScore-portability plumbing pipeline (test-mode downsample)

--- a/projects/rareVariant-burdenScore-portability/configs/chr22_plumbing.env
+++ b/projects/rareVariant-burdenScore-portability/configs/chr22_plumbing.env
@@ -15,6 +15,10 @@ CHR="22"
 DEST_INPUTS="/inputs/rv_portability/saige_chr22_plumbing"
 DEST_SAIGE="/saige/chr22_test"
 
+# --- Where to persist small pipeline state/log artifacts in DNAnexus ---
+DEST_PERSIST="/persist/rv_portability/saige_chr22_plumbing"
+DX_LOG_DIR="/persist/logs/rv_portability/saige_chr22_plumbing"
+
 # --- Local temp on the compute instance (ephemeral) ---
 TMP_BASE="/opt/notebooks/work/tmp/rvp_saige_chr22"
 
@@ -23,31 +27,34 @@ APP_SPARSE_GRM="saige_gwas_sparse_grm"
 APP_NULL_MODEL="saige_gwas_grm"
 APP_GBAT="saige_gwas_gbat"
 
-# --- Instance types (test vs full) ---
-TEST_INSTANCE_TYPE="mem1_hdd1_v2_x16"
-FULL_INSTANCE_TYPE="mem1_hdd1_v2_x72"
+# --- Instance types (adjust as needed) ---
+# IMPORTANT: sparse GRM can be memory-hungry. Use a larger instance.
+SPARSE_INSTANCE_TYPE="mem1_hdd1_v2_x72"
+NULL_INSTANCE_TYPE="mem1_hdd1_v2_x16"
+GBAT_INSTANCE_TYPE="mem1_hdd1_v2_x16"
 
-# --- TEST MODE to reduce memory ---
+# --- TEST MODE flags (no local plink2 downsample; kept for future scaling knobs) ---
 TEST_MODE=1
-
-# Keep only first N individuals from .fam (reduces memory in sparse GRM)
 TEST_N_INDIV=50000
-
-# Thin to N variants (reduces IO/time; sparse GRM also uses random markers)
 TEST_N_VARIANTS=5000
 
-# Sparse GRM params
-NUM_RANDOM_MARKER=500
+# --- Sparse GRM params (reduce these for test runs) ---
+NUM_RANDOM_MARKER=200
 RELATEDNESS_CUTOFF=0.125
 
-# Step2 (GBAT) plumbing (optional)
-RUN_GBAT=0
+# --- Null model plumbing ---
+TRAIT_TYPE="quantitative"      # dummy phenotype => quantitative
+PHENO_COL="pheno"
+SAMPLE_ID_COL="IID"
+COVARIATES="sex"
+INVERSE_NORMALIZE=false
 
-# For step2, restrict to a small genomic region during test
+# --- Step2 (GBAT) plumbing ---
+RUN_GBAT=0
+MAX_MAF_FOR_GROUP_TEST=0.01
 TEST_RANGE_START=1
 TEST_RANGE_END=5000000
 
-# Group file strategy:
-#   - If RUN_GBAT=1, script will try to locate a UKB-provided group file
-#     in WGS v2. If not found, it will stop with instructions.
+# If RUN_GBAT=1 you must set GROUP_TXT_ID (recommended) OR a pattern to search.
+GROUP_TXT_ID=""
 GROUP_FILE_PATTERN="*group*chr22*"
